kubernetes/pgadmin/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgadmin
  namespace: pgadmin
spec:
  serviceName: pgadmin-service
  podManagementPolicy: Parallel
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.18
          imagePullPolicy: Always
          ports:
          - name: https
            containerPort: 443
            protocol: TCP
          volumeMounts:
          - name: pgadmin-config
            mountPath: /pgadmin4/servers.json
            subPath: servers.json
            readOnly: true
          - name: pgadmin-data
            mountPath: /var/lib/pgadmin
          - name: pgadmin-ssl
            mountPath: /certs/server.cert
            subPath: tls.crt
          - name: pgadmin-ssl
            mountPath: /certs/server.key
            subPath: tls.key
      volumes:
      - name: pgadmin-config
        configMap:
          name: pgadmin-config
      - name: pgadmin-ssl
        secret:
          secretName: pgadmin.mydomain.de
  volumeClaimTemplates:
  - metadata:
      name: pgadmin-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
