kubernetes/pgadmin/base/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: pgadmin-service
 namespace: pgadmin
spec:
 ports:
 - protocol: TCP
   port: 443
 selector:
   app: pgadmin
